# MK-server

./: .gitignore  CMakeLists.txt  README.md  cmake.cmd  cmake.sh
common/: common.h  qt_includes.h  stl_includes.h
src/: main.cpp
